// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDrawer snapshots tests renders menu with dividers 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={true}
  onRequestChange={[Function]}
  open={null}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="columns is-gapless is-mobile"
      >
        <div
          className="column is-centered"
        />
        <div
          className="column is-narrow is-hidden-tablet menuCloseButton"
        >
          <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <HardwareKeyboardArrowLeft />
          </IconButton>
        </div>
      </div>
    </div>
    <List
      className="main-menu"
      id="mainMenu"
      tabIndex={-1}
    >
      <div
        className="skipNav"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="skipButton"
        />
      </div>
      <span
        className="menu-item-container"
        key="0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
      <span
        className="menu-item-container"
        key="2"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 1"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 1"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
    </List>
  </div>
</Drawer>
`;

exports[`MenuDrawer snapshots tests renders menu with logo 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={false}
  onRequestChange={[Function]}
  open={false}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="columns is-gapless is-mobile"
      >
        <div
          className="column is-centered"
        >
          <img
            alt="desc of image"
            src="http://image/image.svg"
          />
        </div>
        <div
          className="column is-narrow is-hidden-tablet menuCloseButton"
        >
          <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <HardwareKeyboardArrowLeft />
          </IconButton>
        </div>
      </div>
    </div>
    <List
      className="main-menu"
      id="mainMenu"
      tabIndex={-1}
    >
      <div
        className="skipNav"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="skipButton"
        />
      </div>
      <span
        className="menu-item-container"
        key="0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
      <span
        className="menu-item-container"
        key="1"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
    </List>
  </div>
</Drawer>
`;

exports[`MenuDrawer snapshots tests renders menu without dividers 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={false}
  onRequestChange={[Function]}
  open={false}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="columns is-gapless is-mobile"
      >
        <div
          className="column is-centered"
        />
        <div
          className="column is-narrow is-hidden-tablet menuCloseButton"
        >
          <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <HardwareKeyboardArrowLeft />
          </IconButton>
        </div>
      </div>
    </div>
    <List
      className="main-menu"
      id="mainMenu"
      tabIndex={-1}
    >
      <div
        className="skipNav"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="skipButton"
        />
      </div>
      <span
        className="menu-item-container"
        key="0"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
      <span
        className="menu-item-container"
        key="1"
      >
        <ListItem
          autoGenerateNestedIndicator={true}
          containerElement="span"
          disableKeyboardFocus={false}
          disabled={false}
          initiallyOpen={false}
          insetChildren={false}
          leftIcon={null}
          nestedItems={Array []}
          nestedLevel={0}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onNestedListToggle={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          open={null}
          primaryText="Primary text 0"
          primaryTogglesNestedList={false}
          secondaryText="secondary text 0"
          secondaryTextLines={1}
          tabIndex={-1}
        />
      </span>
    </List>
  </div>
</Drawer>
`;
